<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <View
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:background="@color/my_default_background"/>

    <LinearLayout
        android:id="@+id/my_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:id="@+id/my_face"
            android:layout_height="80sp"
            android:layout_width="80sp"
            android:layout_marginStart="15sp"
            android:contentDescription="@string/my_face_description"/>
        <TextView
            android:id="@+id/my_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical|start"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:background="@color/my_default_background"/>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1sp"-->
        <!--android:background="@color/royalblue"/>-->


    <TextView
        android:id="@+id/textview_reply_me"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@mipmap/reply_me"
        android:text="@string/reply_me"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center_vertical|start"
        android:layout_marginStart="15dp"
        android:background="@color/white"/>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="20sp"-->
        <!--android:background="#f5f5f5"/>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/my_default_theme_color"/>

    <TextView
        android:id="@+id/textview_my_secret_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@mipmap/my_secret_message"
        android:text="@string/my_secret_message"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center_vertical|start"
        android:layout_marginStart="15dp"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:background="@color/my_default_background"/>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1sp"-->
        <!--android:background="@color/royalblue"/>-->

    <TextView
        android:id="@+id/textview_my_favorite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@mipmap/my_favorite"
        android:text="@string/my_facorite"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center_vertical|start"
        android:layout_marginStart="15dp"
        android:background="@color/white"/>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="20sp"-->
        <!--android:background="#f5f5f5"/>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/my_default_theme_color"/>

    <TextView
        android:id="@+id/textview_my_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@mipmap/my_settings"
        android:text="@string/my_settings"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center_vertical|start"
        android:layout_marginStart="15dp"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_default_background"/>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1sp"-->
        <!--android:background="@color/royalblue"/>-->


</LinearLayout>