<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearlayout">

    <!--主回复框-->
    <LinearLayout
        android:id="@+id/linearlayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/shape_boarder_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_plus"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_plus"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_reply_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:maxLines="3"
                android:minHeight="36dp"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/imageview_emoji"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:src="@mipmap/ic_emotion"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_button_reply_button"
            android:text="发送"
            android:textColor="@color/reply_button_text_disable"/>

    </LinearLayout>

    <!--当按下加号按钮时显示的内容-->
    <LinearLayout
        android:id="@+id/linearlayout_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shape_boarder_layout"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:drawableTop="@android:drawable/ic_menu_gallery"
            android:gravity="center_vertical|start"
            android:text="@string/image"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textview_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:gravity="center_vertical|start"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textview_senior_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:gravity="center_vertical|start"
            android:text="@string/senior_reply"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--当按下表情按钮时显示的内容-->
    <RelativeLayout
        android:id="@+id/relativelayout_emoji"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:layout_height="200dp"
        tools:visibility="visible">

        <com.lue.laoyoutiao.view.SlidingTabLayout
            android:id="@+id/sliding_tabs"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentTop="true">

        </com.lue.laoyoutiao.view.SlidingTabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/sliding_tabs"
            android:background="#e0e0e0"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sliding_tabs">

        </android.support.v4.view.ViewPager>

    </RelativeLayout>

</LinearLayout>